--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.show-sql=true
 
 spring.kafka.bootstrap-servers=localhost:9092
 #spring.kafka.consumer.group-id=<consumer_group_id>
-#spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.auto-offset-reset=earliest
 
 #0 no waite kf response, 1: leader write success not wait follower
 # -1 waite for all leader and replication
@@ -29,9 +29,9 @@ spring.kafka.producer.properties.[max.in.flight.requests.per.connection]=5
 
 #consumer
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
 #producer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.JsonSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 
