--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 my_name=java_dev
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
