--- a/investor-service/pom.xml
+++ b/investor-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Investors</artifactId>
+    <artifactId>investor-service</artifactId>
 
     <description>Module Investor for manage account in trading system </description>
 
